// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`As a developer, I can create client and send request with variables. 1`] = `
Object {
  "query": "query { companyName }",
  "variables": Object {
    "variable": 2,
  },
}
`;

exports[`As a developer, I can create client and send request. 1`] = `
Object {
  "query": "query { companyName }",
  "variables": Object {},
}
`;

exports[`As a developer, I can create client, set API credentials and send request. 1`] = `
Object {
  "body": Object {
    "query": "query { companyName }",
    "variables": Object {},
  },
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "authorization": Array [
      "Bearer idToken",
    ],
    "connection": Array [
      "close",
    ],
    "content-length": Array [
      "48",
    ],
    "content-type": Array [
      "application/json",
    ],
    "host": "api.test.8base.com",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
    "workspace": Array [
      "workspaceId",
    ],
  },
}
`;

exports[`As a developer, I can send queries with graphql tag. 1`] = `
Object {
  "body": Object {
    "query": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "selections": Array [
              Object {
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "name": Object {
                  "kind": "Name",
                  "value": "companyName",
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 47,
        "start": 0,
      },
    },
    "variables": Object {},
  },
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "connection": Array [
      "close",
    ],
    "content-length": Array [
      "326",
    ],
    "content-type": Array [
      "application/json",
    ],
    "host": "api.test.8base.com",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
  },
}
`;

exports[`When client receive network errors, it should throw that error. 1`] = `[Error: GraphQL Error (Code: 502): {"response":{"foo":"bar","status":502},"request":{"query":{"kind":"Document","definitions":[{"kind":"OperationDefinition","operation":"query","variableDefinitions":[],"directives":[],"selectionSet":{"kind":"SelectionSet","selections":[{"kind":"Field","name":{"kind":"Name","value":"companyName"},"arguments":[],"directives":[]}]}}],"loc":{"start":0,"end":47}},"variables":{}}}]`;

exports[`When client receive other errors, it should throw that error. 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "code": "InvalidTokenError",
    },
  ],
  "status": 502,
}
`;

exports[`When client receive refresh token expired error, it should throw cant refresh token error. 1`] = `[Error: Can't refresh token.]`;

exports[`When client receive token expired error, it should refresh token and repeat my request. 1`] = `
Object {
  "body": Object {
    "query": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "name": Object {
            "kind": "Name",
            "value": "UserRefreshToken",
          },
          "operation": "mutation",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "selections": Array [
              Object {
                "arguments": Array [
                  Object {
                    "kind": "Argument",
                    "name": Object {
                      "kind": "Name",
                      "value": "data",
                    },
                    "value": Object {
                      "fields": Array [
                        Object {
                          "kind": "ObjectField",
                          "name": Object {
                            "kind": "Name",
                            "value": "refreshToken",
                          },
                          "value": Object {
                            "kind": "Variable",
                            "name": Object {
                              "kind": "Name",
                              "value": "refreshToken",
                            },
                          },
                        },
                      ],
                      "kind": "ObjectValue",
                    },
                  },
                ],
                "directives": Array [],
                "kind": "Field",
                "name": Object {
                  "kind": "Name",
                  "value": "userRefreshToken",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "selections": Array [
                    Object {
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "refreshToken",
                      },
                    },
                    Object {
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "name": Object {
                        "kind": "Name",
                        "value": "idToken",
                      },
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [
            Object {
              "directives": Array [],
              "kind": "VariableDefinition",
              "type": Object {
                "kind": "NonNullType",
                "type": Object {
                  "kind": "NamedType",
                  "name": Object {
                    "kind": "Name",
                    "value": "String",
                  },
                },
              },
              "variable": Object {
                "kind": "Variable",
                "name": Object {
                  "kind": "Name",
                  "value": "refreshToken",
                },
              },
            },
          ],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 160,
        "start": 0,
      },
    },
    "variables": Object {},
  },
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "connection": Array [
      "close",
    ],
    "content-length": Array [
      "1084",
    ],
    "content-type": Array [
      "application/json",
    ],
    "host": "api.test.8base.com",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
    "workspace": Array [
      "workspaceId",
    ],
  },
}
`;

exports[`When client receive token expired error, it should refresh token and repeat my request. 2`] = `
Object {
  "body": Object {
    "query": "query { companyName }",
    "variables": Object {},
  },
  "headers": Object {
    "accept": Array [
      "*/*",
    ],
    "accept-encoding": Array [
      "gzip,deflate",
    ],
    "authorization": Array [
      "Bearer newIdToken",
    ],
    "connection": Array [
      "close",
    ],
    "content-length": Array [
      "48",
    ],
    "content-type": Array [
      "application/json",
    ],
    "host": "api.test.8base.com",
    "user-agent": Array [
      "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    ],
    "workspace": Array [
      "workspaceId",
    ],
  },
}
`;
